--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,3 +4,6 @@
 
 @import '../components/_commonComponents/_index.scss';
 @import '../components/Cards/_cards.scss';
+@import '../components/MainPage/_main-page.scss';
+@import '../components/Deck/_deck.scss';
+@import '../components/Button/_button.scss';
