--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -38,5 +38,10 @@ input, textarea {
 }
 
 .App {
+	position: relative;
 	padding: 20px;
+	background-color: green;
+	height: 100vh;
+	width: 100%;
+	box-sizing: border-box;
 }
