I,plement In play

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,3 +7,4 @@
 @import '../components/MainPage/_main-page.scss';
 @import '../components/Deck/_deck.scss';
 @import '../components/Button/_button.scss';
+@import '../components/InPlay/_in-play.scss';
