Impelemt full game process

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,3 +8,4 @@
 @import '../components/Deck/_deck.scss';
 @import '../components/Button/_button.scss';
 @import '../components/InPlay/_in-play.scss';
+@import '../components/_commonComponents/PopUp/_pop-up.scss';
